Added site title and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React App</title>
+    <title>App Dev Bootcamp Portal</title>
+    <link rel="icon" type="image/x-icon" href="appdev_favicon.png">
   </head>
   <body>
     <!-- React will render everything here -->
